# iree

build_tools/bazel/: iree_bitcode_library.bzl  iree_c_module.bzl  iree_flatcc.bzl
compiler/plugins/input/Torch/: BUILD.bazel
compiler/plugins/input/Torch/InputConversion/: BUILD.bazel
compiler/src/iree/compiler/Codegen/LLVMGPU/: Passes.cpp
runtime/src/iree/hal/drivers/: BUILD.bazel
runtime/src/iree/hal/drivers/hip/: BUILD.bazel  stream_command_buffer.c
runtime/src/iree/hal/drivers/hip/registration/: BUILD.bazel
